# pyproject.toml
[tool.poetry]
name = "climate-data-explorer"
version = "0.1.0"
description = "Streamlit app per analisi interattiva di dati climatici (Europa)."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
streamlit = "^1.36.0"
plotly = "^5.22.0"
xarray = "^2024.6.0"
netCDF4 = "^1.7.1.post2"
dask = "^2024.6.1"
geopandas = "^1.0.1"
regionmask = "^0.12.1"
shapely = "^2.0.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.1"
scikit-image = "^0.24.0"
pyproj = "^3.6.1"
matplotlib = "^3.8.4"
cdsapi = "^0.7.3" # opzionale: download da Copernicus CDS


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"